--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "gulp-autoprefixer": "^2.3.1",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.0.4",
-    "node-bourbon": "^4.2.3"
+    "gulp-sftp": "^0.1.5",
+    "node-bourbon": "^4.2.3",
+    "vinyl-ftp": "^0.6.0"
   }
 }
